assignment-2/yaml/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx-deployment
  labels:
    app: hello-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
        - name: hello-nginx
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /home
              name: hello-volume
          lifecycle:
            postStart:
              exec:
                command:
                  ["/bin/sh", "-c", "echo My name is $HOSTNAME! > /home/me.txt"]
          livenessProbe:
            exec:
              command:
                - cat
                - /home/me.txt
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: hello-volume
          persistentVolumeClaim:
            claimName: hello-claim
